trunk/Archive2/cc/e42745ba4ef2ef/output
main.cpp:15:5: error: no matching function for call to 'swap'
    swap( num1, num2 ); // *** error ****
    ^~~~
main.cpp:2:6: note: candidate function not viable: no known conversion from 'int' to 'int *' for 1st argument; take the address of the argument with &
void swap(int *num1, int *num2)
     ^
1 error generated.
